Added document owner & category support to the index
